[package]

name = "rustc-serialize"
version = "0.2.5"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang/rustc-serialize"
homepage = "https://github.com/rust-lang/rustc-serialize"
documentation = "http://doc.rust-lang.org/rustc-serialize"
description = """
Generic serialization/deserialization support corresponding to the
`deriving(RustcEncodable, RustcDecodable)` mode in the compiler.
"""
